--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
